# PIVX-Android

./: .gitignore  .gitmodules  README.md  build.gradle  copyright  settings.gradle
app/: .gitignore  CMakeLists.txt  build.gradle  proguard-rules.pro
app/assets/: bip39-wordlist.txt  checkpoints  checkpoints-testnet  loading_animation.json  splash_animation.json
app/libs/1.67.0/: Android.mk
app/libs/openssl/include/openssl/: opensslconf.h
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: hash.cpp  hash.h  native-lib.cpp  serialize.h  sha256.cpp  sha256.h
app/src/main/cpp/libzerocoin/: bignum.h
app/src/main/res/drawable/: bg_action_bar.xml  bg_border_bottom_grey.xml  bg_button_border.xml  bg_button_border_curce.xml  bg_button_green.xml  bg_button_grey.xml  bg_button_left.xml  bg_button_purple.xml  bg_edit_text_primary_selector.xml  bg_edit_text_white_selector.xml  bg_gradient.xml  bg_inputs.xml  bg_inputs_primary.xml  bg_inputs_primary_focused.xml  bg_inputs_primary_white.xml  bg_inputs_white.xml  bg_inputs_white_focused.xml  bg_login_button.xml  bg_radio.xml  bg_radio_selected.xml  bg_round_selection.xml  bg_selling_btns_deselected.xml  bg_settings_input_bottom.xml  bg_settings_input_top.xml  bg_spinner.xml  bg_toolbar_login.xml  bg_transparent_bottom_grey.xml  btn_box.xml  btn_divider.xml  button_selector.xml  color_cursor.xml  dialog_bg.xml  edit_border.xml  list_selector.xml  login_input.xml  pin_circle.xml  pin_circle_active.xml  pin_circle_white.xml  radio_text_selector.xml  radiobutton_selector.xml  (+4 more)
app/src/main/res/layout/: activity_base.xml  activity_base_without_toolbar.xml  activity_buying_base.xml  activity_convert.xml  activity_loading.xml  activity_main.xml  activity_privacy.xml  activity_splash.xml  activity_zercoin_control.xml  amount_input.xml  app_bar_main.xml  backup_dialog.xml  backup_file_row.xml  base_recycler_fragment.xml  buy_dash_offers_item.xml  buy_dash_offers_item_double.xml  change_address_main.xml  contact_row.xml  content_main.xml  custom_fee_fragment.xml  custom_fee_main.xml  detail_output_row.xml  dialog_currency_picker.xml  dialog_error.xml  dialog_node.xml  dialog_send_confirmation.xml  dialog_title.xml  donations_fragment.xml  exchange_rates_content.xml  export_key_main.xml  export_zpiv_main.xml  fragment_address.xml  fragment_buy_dash_email_and_phone.xml  fragment_buy_dash_offer_amount.xml  fragment_buy_dash_order_history.xml  fragment_buying_email_and_phone.xml  fragment_buying_location.xml  fragment_buying_offer_amount.xml  fragment_buying_order_history.xml  fragment_buying_payment_center.xml  (+79 more)
app/src/main/res/menu/: activity_main_drawer.xml  address.xml  crud_menu.xml  exchange_rates_context.xml  main.xml  main_private.xml  save.xml  save_menu.xml  save_menu_default.xml  send_menu.xml  send_zpiv_menu.xml
app/src/main/res/values-cs/: strings.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fi/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-ko/: strings.xml
app/src/main/res/values-nl/: strings.xml
app/src/main/res/values-pt/: strings.xml
(+437 files in other folders)
